infrastructure/kubernetes/fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraudguard-fastapi
  namespace: fraudguard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraudguard-fastapi
  template:
    metadata:
      labels:
        app: fraudguard-fastapi
    spec:
      containers:
        - name: fastapi
          image: 199964507152.dkr.ecr.us-east-1.amazonaws.com/fraudguard-fastapi:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
