infrastructure/kubernetes/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraudguard-fastapi-svc
  namespace: fraudguard
spec:
  type: LoadBalancer
  selector:
    app: fraudguard-fastapi
  ports:
  - name: http        
    port: 80
    targetPort: 8000
