infrastructure/kubernetes/fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraudguard-fastapi-ingress
  namespace: fraudguard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fraudguard-fastapi-svc
                port:
                  number: 80
